# Graider

./: .bandit-baseline.json  .bandit.yaml  .env.example  .env.telegram  .gitignore  .pip-audit-ignore  AGENTS.md  AI_DETECTION_RESEARCH.md  AI_GRADING_RESEARCH_2026.md  ASSESSMENT_AUTOMATION_BUILDER.md  ASSESSMENT_FROM_LESSONS_FEATURE.md  ASSESSMENT_IMPLEMENTATION_EDITS.md  ASSISTANT_CONTEXT_AND_CALENDAR_PLAN.md  ASSISTANT_IMPLEMENTATION.md  ASSISTANT_WORKSHEET_PLAN.md  AUTOMATION_BUILDER_PLAN.md  BEHAVIOR_TRACKING.md  BLANK_GRADING_FIX_AND_AUTOMATION_BUILDER_PLAN.md  BUG_FIXES.md  CLAUDE.md  CLEVER_INTEGRATION.md  CODEBASE_IMPROVEMENTS_PLAN.md  CODEBASE_REVIEW.md  CODEBASE_REVIEW_ASSESSMENT.md  CORNELL_NOTES_SUBMISSION_PLAN.md  Create_Mac_App_Instructions.md  DISTRICT_ANALYTICS_PLAN.md  DISTRICT_SETUP.md  EXPORT_ENDPOINTS_PLAN.md  FITB_SCORER_PLAN.md  GRADING_UPGRADE_PLAN.md  GRAIDER_FERPA_COMPLIANCE.md  GRAIDER_FERPA_IMPLEMENTATION.md  GRAIDER_LESSON_PLANNER_IMPLEMENTATION.md  GRAIDER_OPENCLAW_ENHANCEMENTS.md  GRAIDER_REFACTORING_PLAN.md  GRAIDER_TABLES_PLAN.md  IMPLEMENTATION_EDITS.md  IPHONE_APP_PLAN.md  LATE_PENALTY_PLAN.md  (+68 more)
.claude/: settings.local.json
GraiderCompanion/: project.yml
Period CSVs/: Period 1.csv  Period 2.csv  Period 4.csv  Period 5.csv  Period 6.csv  Period_7.csv
backend/: __init__.py  accommodations.py  api_keys.py  app.py  auth.py  celery_app.py  clever.py  config.py  extensions.py  feature_flags.py  lti.py  metrics.py  oneroster.py  paths.py  providers.py  retry.py  roster_sync.py  rubric_config.py  staging.py  storage.py  student_history.py  supabase_client.py  supabase_client_scoped.py  supabase_resilient.py
data/: bot.db-shm  bot.db-wal
(+2168 files in other folders)
