[project]
# Closes audit MAJOR #16 (Codex 2026-05-06 / issue #219): align
# Python version guidance with what tooling actually targets. Ruff
# targets py312 below; CI uses 3.12; production runtime is 3.12.
# Pinning here so `pip install` / `uv` setup tooling validates the
# interpreter at install time rather than failing later at runtime.
name = "graider"
version = "0.1.0"
requires-python = ">=3.12"

[tool.alembic-destructive-ops]
allowlist = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "T20",    # flake8-print
    "E722",   # bare `except:` — Error Handling regression lock (hardening sprint PR2)
    "BLE001", # blind `except Exception` — existing sites noqa'd with justification (PR2); swallow sweep is PR6
]

[tool.ruff.lint.per-file-ignores]
# Intentional print surfaces — do NOT expand this list without review. See Phase 5a PR C2.
"backend/services/outlook_sender.py" = ["T20"]  # stdout JSON IPC protocol
"backend/services/visualization.py" = ["T20"]   # local test harness
"backend/services/grader_cli.py" = ["T20"]      # legacy local-folder grading CLI (user-facing progress)
"backend/migrations/env.py" = ["T20"]           # hard-fail CLI errors to stderr
"backend/scripts/**" = ["T20"]                  # CLI scripts
"scripts/check_docs_drift.py" = ["T20"]         # CI docs-drift gate: print IS the job output
# Note: backend/services/email_service.py is NOT in this list — runtime code
# paths (GraiderEmailer class methods) use _logger; the __main__ CLI block
# keeps prints with inline `# noqa: T201` for user-facing output.
